@@ -12,6 +12,7 @@ Changelog
 - Make the changed field a python datetime. [njohner]
 - Fix Officeconnector permission checks for task documents tab actions. [Rotonen]
 - Ensure clamped down enough permissions on shadow documents. [Rotonen]
+- Include bumblebee-checksum into @listing endpoint [elioschmutz]
 - Drop verbose logging for ObjectTouched events. [lgraf]
 - Bump ftw.solr to 2.3.1 to get reindexObjectSecurity fix. [lgraf]
 - Fix an issue when creating meetings from a template. [deiferni]
